# ROS2_UR_manipulation_ws

./: README.md
Documentation/: 1_Introduction_setup.md  1_ROS2_CustomSetup_UR_robots.md  2_Setup_moveit_package.md  3_Motion_planning.md
Documentation/Files/: 1_Install_setup.md  Interesting_tutorials.md  Link_courses.docx  Tutorials.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_moveit_config/share/my_moveit_config/: .setup_assistant  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotiq_85_description/share/robotiq_85_description/: package.sh
install/robotiq_85_gripper/share/robotiq_85_gripper/: local_setup.sh  package.sh
install/robotnik_sensors/share/robotnik_sensors/: local_setup.sh  package.sh
install/robotnik_sensors_gazebo/share/robotnik_sensors_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur_description/share/ur_description/: package.sh
install/ur_description/share/ur_description/launch/: view_ur.launch.py
log/: latest_build
src/Universal_Robots_ROS2_Description/launch/: view_ur.launch.py
src/Universal_Robots_ROS2_Description/urdf/: ur3e_moveit.urdf
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/launch/: ur_sim_moveit.launch.py
src/my_moveit_config/config/: name.srdf
src/my_ur_bringup/: package.xml  setup.cfg  setup.py
src/my_ur_bringup/launch/: spawn_ur5_camera.launch.py  spawn_ur5_camera_gripper.launch.py  spawn_ur5_camera_gripper_moveit.launch.py  spawn_ur5_camera_moveit.launch.py  ur5e_custom_sim_bringup.launch.py  view_ur5_camera.launch.py  view_ur5_camera_gripper.launch.py
src/my_ur_bringup/rviz/: config_ur5_robotiq.rviz  view_ur5_camera.rviz
src/my_ur_bringup/urdf/: camera.xacro  robotiq_gripper_macro.xacro  ur5_camera.urdf.xacro  ur5_camera_gripper.urdf.xacro  ur5_macro.xacro  ur5e_custom.xacro
src/ur_moveit_config/: .setup_assistant  package.xml
src/ur_moveit_config/config/: joint_limits.yaml  ur3e.srdf
src/ur_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ur_simulation_gazebo/: CMakeLists.txt  package.xml
src/ur_simulation_gazebo/config/: ur_controllers.yaml
src/ur_simulation_gazebo/launch/: gazebo.launch.py  spawn.launch.py
src/ur_simulation_gazebo/urdf/: ur_robot_gazebo.urdf.xacro
